* BUG#8208 Forbid deletion of numbered contracts
* BUG#8249 Check new end date exists before cleaning versions
* BUG#4856 Use only two columns for options form view
* BUG#7979 Allow/reactivate the deletion of quotes and declined contracts
* BUG#7876 Modify the reactivate process in order to be able to activate void contract
* BUG#7951 Fix override of method execute in event type action
* BUG#7885 Fix behavior of termination when there are several future activation periods
* BUG#7783 Limit option's end date with contract's final end date instead of contract's end date
* FEA#7737 Add 'Contract Change Sub Status' wizard on active contracts
* BUG#7660 Do not set termination reason and end date of the activation history when reactivating a hold contract that has already been renewed
* BUG#7633 fix searcher for initial_start_date on void contracts
* FEA#7567 The contract dates can now be initialized by a business rule on the product
* FEA#7557 Hide option end_date field if unset
* BUG#1824 Clean versioned data when changing a contract's end date

Version 1.14 - 2017-11-09
* BUG#5374 Consistency between contrat dates getter and the searcher function of these last
* BUG#5980 Add functions to rule engine to get the status and the final end date of a contract
* BUG#7374 Add index on contract product
* FEA#7024 Configure default reports templates to be added as default letters in coog
* BUG#6468 Use manual_start_date if defined on a covered element to calculate option start_date
* FEA#7122 Add default quote number sequence on offered configuration
* FEA#7002 Display the contract's icon in its form view
* BUG#6993 Removing simple json import
* BUG#6870 Use party's main address instead of searching for to date active address in contract's contact
* BUG#6748 Possibility to clear the termination reason when reactivating a contract
* BUG#6616 Allow termination in previous activation period

Version 1.12 - 2017-04-28
* FEA#0000 Add Contract Notifications